Fix clicking on mobile, fix the avatars of mobile featured posts on the homepage.

--- a/static/css/main_new.less
+++ b/static/css/main_new.less
@@ -1,3 +1,7 @@
+.btn {
+  -webkit-tap-highlight-color: rgba(0,0,0,0) !important;
+}
+
 #featured_posts_bar {
 }
 a.sub-comments {
