--- a/static/css/modules_bundle.css
+++ b/static/css/modules_bundle.css
@@ -40,9 +40,9 @@
 #navigation_bar{border:1px solid #606060;border-right:none !important;border-left:none !important;position:fixed;top:0px;left:0px;width:100%;height:50px;border:1px solid #CECECE;background:url('/static/images/navigation_bar.png') repeat-x;}#navigation_bar .logo{margin:11px 0px 0px 20px;width:322px;height:28px;}
 #navigation_bar #navigation_button{padding:0px;float:right;margin:8px 10px 0px 10px;width:10%;height:32px;text-align:center;color:#777;}
 #navigation_bar #navigation_items{z-index:1001;}#navigation_bar #navigation_items #nav_buttons{display:inline;}
-#navigation_bar #navigation_items .account_settings_btn{margin-left:10px;}#navigation_bar #navigation_items .account_settings_btn img{width:18px;height:18px;border:1px solid gray;margin-right:10px;}
-#navigation_bar #navigation_items .account_settings_btn p{max-width:160px;overflow:hidden;display:inline-block;margin:0px;padding:0px;}
-#navigation_bar #navigation_items .submit_content_btn{color:#333;margin-left:10px;}
+#navigation_bar #navigation_items #account_settings_btn{margin-left:10px;}#navigation_bar #navigation_items #account_settings_btn img{width:18px;height:18px;border:1px solid gray;margin-right:10px;}
+#navigation_bar #navigation_items #account_settings_btn p{color:#777;max-width:160px;overflow:hidden;display:inline-block;margin:0px;padding:0px;}
+#navigation_bar #navigation_items #submit_content_btn{color:#333;margin-left:10px;}
 #navigation_bar #navigation_items li a:hover{text-decoration:none;}
 @media (min-width:1024px){#navigation_button{display:none;} #navigation_items{margin:10px 5px 10px 20px;height:auto !important;float:right;list-style-type:none;}#navigation_items li{display:inline;margin:0px 10px;}#navigation_items li a{color:#777;} #navigation_items li a:hover{color:#555;}}@media (max-width:1023px){#navigation_bar{position:static !important;} #navigation_button{display:inline;} #navigation_items{position:fixed;top:0px;left:0px;margin:52px 0px 0px 0px;width:100%;background:#222;}#navigation_items li:first-child{margin-top:30px;} #navigation_items li.nav_item a{display:block;margin:20px 20px 20px 20px;padding:20px;color:#D3D3D3;background-color:#333;} #navigation_items li.nav_item a:hover{text-decoration:none;background-color:#444;} #navigation_items li{display:block;}#navigation_items li #nav_buttons{float:right;margin:10px 20px 20px 20px;}}.tags_list{margin:0px 0px 0px 15px;padding:0;list-style:none;display:inline-block;}
 .tags_list .tag{margin:4px 10px 5px 10px padding: 0;float:left;position:relative;display:block;overflow:hidden;}
