--- a/ui/modules/nav_bar/main.less
+++ b/ui/modules/nav_bar/main.less
@@ -32,7 +32,7 @@
     #nav_buttons {
         display: inline;
     }
-    .account_settings_btn {
+    #account_settings_btn {
         img {
             width: 18px;
             height: 18px;
@@ -41,6 +41,7 @@
         }
         margin-left: 10px;
         p {
+            color: #777;
             max-width: 160px;
             overflow: hidden;
             display: inline-block;
@@ -48,7 +49,7 @@
             padding: 0px;
         }
     }
-    .submit_content_btn {
+    #submit_content_btn {
       color: #333;
       margin-left: 10px;
     }
